--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,48 +84,70 @@
                 android:gravity="start"
                 android:orientation="vertical">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20px"
-                    android:layout_marginEnd="@dimen/_20px"
-                    android:background="@drawable/rectangle_bg_search_home">
+                    android:layout_height="match_parent">
 
-                    <EditText
-                        android:id="@+id/edtHomeSearch"
-                        style="@style/txt_PoppinsMedium"
-                        android:layout_width="match_parent"
+                    <RelativeLayout
+                        android:id="@+id/searchBox"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toStartOf="@+id/imageHomeSearch"
-                        android:background="@android:color/transparent"
-                        android:ellipsize="end"
-                        android:hint="@string/lbl_search_here"
-                        android:imeOptions="actionDone"
-                        android:inputType="text"
-                        android:lineSpacingExtra="@dimen/_1px"
-                        android:paddingStart="@dimen/_10px"
-                        android:paddingTop="@dimen/_10px"
-                        android:paddingEnd="@dimen/_10px"
-                        android:paddingBottom="@dimen/_10px"
-                        android:singleLine="true"
-                        android:textColor="@color/home_search_text"
-                        android:textColorHint="@color/home_search_text"
-                        android:textCursorDrawable="@drawable/cursor"
-                        android:textSize="@dimen/_16sp"
-                        tools:ignore="Autofill" />
+                        android:layout_marginStart="@dimen/_20px"
+                        android:layout_marginEnd="@dimen/_20px"
+                        android:layout_weight="10"
+                        android:background="@drawable/rectangle_bg_search_home">
+
+                        <EditText
+                            android:id="@+id/edtHomeSearch"
+                            style="@style/txt_PoppinsMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@+id/imageHomeSearch"
+                            android:background="@android:color/transparent"
+                            android:ellipsize="end"
+                            android:hint="@string/lbl_search_here"
+                            android:imeOptions="actionDone"
+                            android:inputType="text"
+                            android:lineSpacingExtra="@dimen/_1px"
+                            android:paddingStart="@dimen/_10px"
+                            android:paddingTop="@dimen/_10px"
+                            android:paddingEnd="@dimen/_10px"
+                            android:paddingBottom="@dimen/_10px"
+                            android:singleLine="true"
+                            android:textColor="@color/home_search_text"
+                            android:textColorHint="@color/home_search_text"
+                            android:textCursorDrawable="@drawable/cursor"
+                            android:textSize="@dimen/_16sp"
+                            tools:ignore="Autofill" />
+
+                        <ImageView
+                            android:id="@+id/imageHomeSearch"
+                            android:layout_width="@dimen/_20px"
+                            android:layout_height="@dimen/_20px"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10px"
+                            android:contentDescription="@string/app_name"
+                            android:src="@drawable/img_search_home" />
+
+                    </RelativeLayout>
 
                     <ImageView
-                        android:id="@+id/imageHomeSearch"
-                        android:layout_width="@dimen/_20px"
-                        android:layout_height="@dimen/_20px"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
+                        android:id="@+id/imageFilter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_1px"
                         android:layout_marginEnd="@dimen/_10px"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/img_search_home" />
-
-                </RelativeLayout>
+                        android:layout_marginBottom="@dimen/_1px"
+                        android:layout_weight="1"
+                        android:foregroundGravity="center_vertical"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/img_filter"
+                        tools:ignore="ContentDescription"
+                        tools:src="@drawable/img_filter" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tvHomeFeature"
