--- a/app/src/main/res/layout/row_toolbar.xml
+++ b/app/src/main/res/layout/row_toolbar.xml
@@ -28,6 +28,44 @@
             android:gravity="start"
             android:orientation="horizontal">
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/search_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:visibility="gone"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/home_search_text"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <EditText
+                    android:id="@+id/edtAuthorSearch"
+                    style="@style/txt_PoppinsMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/imageAuthorSearch"
+                    android:background="@android:color/transparent"
+                    android:ellipsize="end"
+                    android:hint="@string/lbl_search_here"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:lineSpacingExtra="@dimen/_1px"
+                    android:paddingStart="@dimen/_15px"
+                    android:paddingTop="@dimen/_8px"
+                    android:paddingEnd="@dimen/_10px"
+                    android:paddingBottom="@dimen/_8px"
+                    android:singleLine="true"
+                    android:textColor="@color/home_search_text"
+                    android:textColorHint="@color/home_search_text"
+                    android:textCursorDrawable="@drawable/cursor"
+                    android:textSize="@dimen/_16sp"
+                    tools:ignore="Autofill" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <ImageView
                 android:id="@+id/imageArrowBack"
                 android:layout_width="@dimen/_20px"
@@ -75,7 +113,6 @@
                 android:layout_marginBottom="@dimen/_1px"
                 android:layout_marginEnd="@dimen/_15px"
                 android:scaleType="fitXY"
-                android:visibility="gone"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/imageFilter"
                 android:layout_gravity="center|start"
